2012-02-24  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest (arch): Turn from pointer into object to reduce levels
	of indirection.
	(log_add_instr): Ditto.
	(push_PC, pop_PC): Ditto.
	(avr_op_ICALL, avr_op_RET, avr_op_CALL, avr_op_RCALL): Ditto.
	(parse_args): Ditto.
	(pop_PC, avr_op_EICALL, avr_op_EIJMP): Sanity check PC.
	(PC_VALID_MASK): New macro.
	(skip_instruction_on_condition): Use it to constrain PC.
	(branch_on_sreg_condition): Ditto.
	(avr_op_RJMP, avr_op_RCALL): Ditto.

2012-02-24  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/atxmega128-sim.exp (ldflags): add --defsym=__stack=0x1fff

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (avr_op_EICALL, avr_op_EIJMP): Use get_word_reg to read Z. 

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* README: Add note for avrtest-xmega.
	
	* avrtest.c: Add support for XMEGA.
	* avrtest.h: Ditto.
	* Makefile: Add rules to make avrtest-xmega, avrtest-xmega_log,
	and exit-atxmega128a3.o.

	* dejagnuboards/atxmega128-sim.exp: New file.

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: More GNU coding rule fixess.

2012-02-23  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c: Indent according to GNU coding rules.

2011-12-07  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/atmega128-sim.exp (no_long_long): Don't set to 1
	so that long long run tests are performed.
	
2011-07-06  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/atmega128-sim.exp (keeps_null_pointer_checks):
	Set to 1.

2011-06-09  Georg-Johann Lay  <avr@gjlay.de>

	* README: New file.

2011-06-08  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile: Rewritten.
	* avrtest.h: New file.
	* avrtest.c: Include "avrtest.h"
	(flag_have_stdin, flag_have_stdout): New variables.
	(pargs_args): Unset them on "-no-stdin" resp. "-no-stdout".
	(data_read_byte_raw): Use flag_have_stdin.
	(data_write_byte_raw): Use flag_have_stdout.
	(usage): Document new command line options -no-stdin and
	-no-stdout.