@@ -1,3 +1,8 @@
+2012-02-29  Georg-Johann Lay  <avr@gjlay.de>
+
+	* dejagnuboards/exit.c: Use GNU style.
+	(init_exit_c): Define as constructor instead of .init8.
+
 2012-02-24  Georg-Johann Lay  <avr@gjlay.de>
 
 	* avrtest (arch): Turn from pointer into object to reduce levels
